<resources>
    <string name="app_name">My Application</string>
    <string name="nama">Nama</string>
    <string name="no_hp">Nomor HP</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="alamat">Alamat</string>
    <string name="register">Register</string>
    <string name="create_account"><font color="#00ff00">text</font></string>

    <string-array name="pengguna">
        <item>Pembeli</item>
        <item>Pelapak</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
